# openapi.yaml
@@ -357,6 +357,24 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
+    /api/admin_dhb/daily_location_reward_new:
+        get:
+            tags:
+                - App
+            operationId: App_AdminDailyLocationRewardNew
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/AdminDailyLocationRewardNewReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
     /api/admin_dhb/daily_recommend_reward:
         get:
             tags:
@@ -1151,6 +1169,9 @@ components:
             type: object
             properties: {}
         AdminDailyFeeReply:
+            type: object
+            properties: {}
+        AdminDailyLocationRewardNewReply:
             type: object
             properties: {}
         AdminDailyLocationRewardReply:
